--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "guzzlehttp/guzzle": "~6.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0|~5.0"
+        "phpunit/phpunit": "~4.0|~5.0",
+        "squizlabs/php_codesniffer": "~2.3"
     },
     "autoload": {
         "psr-4": {
