--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,10 @@
         "psr-4": {
             "Hussainweb\\DrupalApi\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Hussainweb\\DrupalApi\\Tests\\": "tests/"
+        }
     }
 }
