Mark 0.9.x release as current master.

--- a/composer.json
+++ b/composer.json
@@ -29,5 +29,10 @@
         "psr-4": {
             "Hussainweb\\DrupalApi\\Tests\\": "tests/"
         }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.9.x-dev"
+        }
     }
 }
