--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "hussainweb/drupal-api-client",
     "description": "Convenient wrapper on Guzzle to access Drupal.org API",
-    "keywords": ["drupal"],
+    "keywords": ["drupal", "api", "guzzle"],
     "license": "GPL-2.0",
     "type": "library",
     "authors": [
@@ -32,7 +32,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.9.x-dev"
+            "dev-master": "1.x-dev"
         }
     }
 }
