--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "hussainweb/drupal-api-client",
     "description": "Convenient wrapper on Guzzle to access Drupal.org API",
-    "keywords": ["drupal", "api", "guzzle"],
+    "keywords": ["drupal", "api"],
     "license": "GPL-2.0",
     "type": "library",
     "authors": [
@@ -14,9 +14,14 @@
     ],
     "require": {
         "php": ">=5.5.9",
-        "guzzlehttp/guzzle": "~6.1"
+        "ext-json": "*",
+        "guzzlehttp/psr7": "^1.6",
+        "php-http/client-implementation": "^1.0",
+        "psr/http-client": "^1.0",
+        "psr/http-message": "^1.0"
     },
     "require-dev": {
+        "php-http/mock-client": "^1.3",
         "phpunit/phpunit": "~4.0|~5.0",
         "squizlabs/php_codesniffer": "~2.3"
     },
@@ -30,9 +35,12 @@
             "Hussainweb\\DrupalApi\\Tests\\": "tests/"
         }
     },
+    "config": {
+        "sort-packages": true
+    },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.x-dev"
+            "dev-master": "2.x-dev"
         }
     }
 }
