--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
     "require-dev": {
         "php-http/mock-client": "^1.3",
-        "phpunit/phpunit": "~4.0|~5.0",
+        "phpunit/phpunit": "^8.0 || ^9.0",
         "squizlabs/php_codesniffer": "^3.5"
     },
     "autoload": {
