Add composer scripts

--- a/composer.json
+++ b/composer.json
@@ -42,5 +42,10 @@
         "branch-alias": {
             "dev-master": "2.x-dev"
         }
+    },
+    "scripts": {
+        "phpcs": ["phpcs --standard=PSR12 src/"],
+        "phpcbf": ["phpcbf --standard=PSR12 src/"],
+        "test": ["phpunit"]
     }
 }
