--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     },
     "require-dev": {
         "php-http/mock-client": "^1.3",
+        "phpstan/phpstan": "^0.12.33",
         "phpunit/phpunit": "^8.0 || ^9.0",
         "squizlabs/php_codesniffer": "^3.5"
     },
@@ -46,6 +47,7 @@
     "scripts": {
         "phpcs": ["phpcs --standard=PSR12 src/"],
         "phpcbf": ["phpcbf --standard=PSR12 src/"],
-        "test": ["phpunit"]
+        "test": ["phpunit"],
+        "phpstan": ["phpstan analyse src/ --level 5"]
     }
 }
