Run PHPStan in Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_script:
 script:
   - vendor/bin/phpcs --standard=PSR12 src/
   - vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
+  - composer phpstan
 
 after_script:
   - php vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover; fi
