--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "guzzlehttp/psr7": "^1.6",
         "php-http/client-implementation": "^1.0",
         "psr/http-client": "^1.0",
-        "psr/http-message": "^1.0"
+        "psr/http-message": "^1.0",
+        "symfony/serializer": "^5.2"
     },
     "require-dev": {
         "php-http/mock-client": "^1.3",
