--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "psr/http-message": "^1.0"
     },
     "require-dev": {
+        "http-interop/http-factory-guzzle": "^1.2",
         "php-http/mock-client": "^1.3",
         "phpstan/phpstan": "^0.12.33",
         "phpunit/phpunit": "^8.0 || ^9.0",
@@ -37,7 +38,10 @@
         }
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "php-http/discovery": true
+        }
     },
     "extra": {
         "branch-alias": {
