--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
     "require-dev": {
         "http-interop/http-factory-guzzle": "^1.2",
         "php-http/mock-client": "^1.3",
-        "phpstan/phpstan": "^0.12.33",
-        "phpunit/phpunit": "^8.0 || ^9.0",
+        "phpstan/phpstan": "^1.10",
+        "phpunit/phpunit": "^9.0",
         "squizlabs/php_codesniffer": "^3.5"
     },
     "autoload": {
