--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "require": {
-        "php": ">=7.1",
+        "php": ">=8.0",
         "ext-json": "*",
         "guzzlehttp/psr7": "^1.6",
         "php-http/client-implementation": "^1.0",
@@ -25,6 +25,7 @@
         "php-http/mock-client": "^1.3",
         "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^9.0",
+        "rector/rector": "^0.18.3",
         "squizlabs/php_codesniffer": "^3.5"
     },
     "autoload": {
@@ -40,7 +41,8 @@
     "config": {
         "sort-packages": true,
         "allow-plugins": {
-            "php-http/discovery": true
+            "php-http/discovery": true,
+            "rector/rector-installer": true
         }
     },
     "extra": {
