--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
     "require": {
         "php": ">=8.0",
         "ext-json": "*",
-        "guzzlehttp/psr7": "^1.6",
+        "guzzlehttp/psr7": "^1.6 || ^2.6",
         "php-http/client-implementation": "^1.0",
         "psr/http-client": "^1.0",
-        "psr/http-message": "^1.0"
+        "psr/http-message": "^1.0 || ^2.0"
     },
     "require-dev": {
         "http-interop/http-factory-guzzle": "^1.2",
